export interface IDataBasePair 
{
    residueIndex1: number;
    residueIndex2: number;
    basePairType: string;
    classes: string[];
}

