export interface IDataLabelLine
{
    classes: Array<string>;
    x1: number;
    x2: number;
    y1: number;
    y2: number;
}

