export interface IDataResidue {
    classes: Array<string>;
    x: number;
    y: number;
    residueName: string;
    residueIndex: number;
    templateResidueIndex: number;
    templateResidueName: string;
}

